# fluent-impl

./: .travis.yml  Cargo.toml  README.md  appveyor.yml  rustfmt.toml
src/: config.rs  impl_block.rs  lib.rs  method.rs  type_utils.rs
tests/: compiletest.rs
tests/compile-fail/: simple_chainable_attr_format.rs  simple_chainable_attr_format2.rs  simple_chainable_attr_str_value.rs  simple_chainable_impl_on_method.rs  simple_chainable_impl_on_mod.rs  simple_chainable_impl_on_stmt.rs  simple_chainable_impl_on_struct.rs  simple_chainable_impl_on_trait_impl.rs  simple_chainable_impl_opts_on_impl_block.rs  simple_chainable_impl_opts_on_mod.rs  simple_chainable_impl_opts_on_stmt.rs  simple_chainable_impl_opts_on_struct.rs  simple_chainable_unknown_attr.rs  simple_chainable_unknown_attr2.rs  simple_double_docs.rs  simple_double_docs_method.rs  simple_double_inblock.rs  simple_double_inblock_method.rs  simple_empty_macro_prefix.rs  simple_empty_method_prefix.rs  simple_empty_name.rs  simple_empty_rename.rs  simple_name_prefix.rs  simple_name_rename.rs  simple_name_rename_prefix.rs  simple_opts_on_non_fluentable.rs  simple_pub_crate.rs  simple_skip.rs
tests/run-pass/: generic_arg.rs  impl_trait.rs  mutref_arg.rs  pattern_args.rs  pattern_fn_arg_generic_type_arg.rs  simple.rs  simple_all_opts.rs  simple_both_inblock.rs  simple_empty_attrs.rs  simple_macro_inblock.rs  simple_method_inblock.rs  simple_name.rs  simple_pub_crate_from_both.rs  simple_pub_crate_from_macro.rs  simple_pub_crate_from_method.rs  simple_rename.rs  trait_bound.rs  where_clause.rs
